[tool.poetry]
name = "pragmatiq"
version = "0.1.0"
description = "PragmatiQ"
authors = ["Valerio Santucci <valerio.santucci.rm@gmail.com>"]

[tool.poetry.dependencies]
python = "3.12"
prometheus-client = "*"
jaeger-client = "*"
aiohttp = "*"
redis = "*"
msgpack = "*"
loguru = "*"
ray = "*"

[poetry.group.dev.dependencies]
ruff = "*"
pytest = "*"
uvicorn = "*"
pytest-asyncio = "*"
pytest-mock = "*"
testcontainers = "*"
httpx = "*"
