[tool.poetry]
name = "pragmatiq"
version = "0.1.0"
description = "PragmatiQ"
authors = ["Valerio Santucci <valerio.santucci.rm@gmail.com>"]

[tool.poetry.dependencies]
python = "3.12"
prometheus-client = "*"
jaeger-client = "*"
aiohttp = "*"
redis = "*"
msgpack = "*"
loguru = "*"
ray = "*"
opentelemetry-api = "^1.31.1"
opentelemetry-sdk = "^1.31.1"
opentelemetry-exporter-jaeger = "^1.21.0"

[tool.poetry.group.dev.dependencies]
ruff = "*"
pytest = "*"
uvicorn = "*"
pytest-asyncio = "*"
pytest-mock = "*"
testcontainers = "*"
httpx = "*"
